[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://scene/menu/find_server/find_server.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/menu/play.png" type="Texture" id=4]
[ext_resource path="res://scene/menu/input_name/input_name.tscn" type="PackedScene" id=5]

[node name="menu" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 119.0
margin_top = 296.0
margin_right = 481.0
margin_bottom = 727.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/CenterContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 431.0
rect_min_size = Vector2( 40, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 318.0
margin_bottom = 431.0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 274.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 2 )
text = "Rectangle 
Warrior"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 274.0
margin_bottom = 227.0
rect_min_size = Vector2( 0, 100 )

[node name="find_button" type="Button" parent="CanvasLayer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_left = 37.0
margin_top = 231.0
margin_right = 237.0
margin_bottom = 431.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/CenterContainer/HBoxContainer"]
margin_left = 322.0
margin_right = 362.0
margin_bottom = 431.0
rect_min_size = Vector2( 40, 0 )

[node name="find_server" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="input_name" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="CanvasLayer/CenterContainer/HBoxContainer/VBoxContainer/find_button" to="." method="_on_find_button_pressed"]
[connection signal="on_close" from="CanvasLayer/find_server" to="." method="_on_find_server_on_close"]
[connection signal="on_create" from="CanvasLayer/find_server" to="." method="_on_find_server_on_create"]
[connection signal="on_join" from="CanvasLayer/find_server" to="." method="_on_find_server_on_join"]
[connection signal="on_close" from="CanvasLayer/input_name" to="." method="_on_input_name_on_close"]
[connection signal="on_continue" from="CanvasLayer/input_name" to="." method="_on_input_name_on_continue"]
